[project]
name = "yieldcurve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "T. Moudiki", email = "thierry.moudiki@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.1.3",
    "numpy>=1.24.0",
    "scikit-learn>=1.0.0",
]

[project.scripts]
yieldcurve = "yieldcurve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"