[project]
name = "yieldcurveml"
version = "0.5.0"
description = "Model-agnostic Machine Learning discount curve calibration, interpolation and extrapolation"
readme = "README.md"
authors = [
    { name = "T. Moudiki", email = "thierry.moudiki@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.1.3",
    "numpy",
    "nnetsauce>=0.29.5",
    "scikit-learn>=1.0.0",
    "scipy",
    "tabulate"
]

[project.scripts]
yieldcurveml = "yieldcurveml:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yieldcurveml"]